infer/tests/codetoanalyze/objc/errors/procdescs/MethodCall.m
/*
 * Copyright (c) 2014 - Facebook.
 * All rights reserved.
 */

#import "MethodCall.h"

@implementation MethodCall

- (int)plusX : (int)x andY : (int)y {
    return x+y;
}

@end
